--- a/src/scss/_faq.scss
+++ b/src/scss/_faq.scss
@@ -1,6 +1,6 @@
 .faq {
     width: 100%;
-    padding-top: 65px;
+    //padding-top: 65px;
     padding-bottom: 80px;
 
     &__title {
@@ -38,7 +38,7 @@
   }
 
   &__desc {
-    margin-left: -40px;
+    margin-left: 15px; 
     padding-right: 17px;
     margin-top: 0;
     margin-bottom: 0;
