changed faq css to portfolio css

--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -1,4 +1,4 @@
-.faq {
+.portfolio {
     width: 100%;
     //padding-top: 65px;
     padding-bottom: 80px;
@@ -8,13 +8,13 @@
       padding-bottom: 25px;
     }
 
-    &__question {
+    &__portfolioName {
       //max-width: 350px;
       width: 100%;
       border-bottom: 1px solid $light-grayish-blue;
     }
 
-    &__question-button {
+    &__portfolioName-button {
       width: 100%;
       display: flex;
       justify-content: space-between;
@@ -26,25 +26,25 @@
       padding-top: 18px;
       padding-bottom: 18px;
 
-    &::after {
-      content: url(../images/icon-arrow-down.svg);
-      margin-right: 17px;
-      transform: rotate(90deg);
+      &::after {
+        content: url(../images/icon-arrow-down.svg);
+        margin-right: 17px;
+        transform: rotate(90deg);
+      }
+
+      &:hover {
+        color: $soft-red;
+      }
     }
 
-    &:hover {
-      color: $soft-red;
+    &__stonk {
+      margin-left: 15px;
+      padding-right: 17px;
+      margin-top: 0;
+      margin-bottom: 0;
+      height: 0;
+      overflow: hidden;
+      transition: all 200ms ease-out;
+      font-size:12px;
     }
-  }
-
-  &__desc {
-    margin-left: 15px; 
-    padding-right: 17px;
-    margin-top: 0;
-    margin-bottom: 0;
-    height: 0;
-    overflow: hidden;
-    transition: all 200ms ease-out;
-    font-size: 11px;
-  }
 }
