--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -70,7 +70,7 @@ button:focus-visible {
 
 @import "component";
 @import "illustration";
-@import "faq";
+@import "portfolio";
 @import "attribution";
 @import "animation";
 @import "responsive"; 
