--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -1,4 +1,4 @@
-.faq__desc.show-description {
+.portfolio__stonk.show-description {
     height: 2rem;
     margin-bottom: 15px;
   }
@@ -6,11 +6,11 @@
   /* Arrows */
   
   /* closed */
-  .faq__question-button::after {
+  .portfolio__question-button::after {
     transition: transform 300ms ease-out; 
   }
   
   /* open */
-  .font-weight-bold::after {
+  .portfolio-weight-bold::after {
     transform: rotate(720deg);
   }
